# inputexec

./: .gitignore  README.rst  pyproject.toml
src/inputexec/: cli.py  config.py
src/inputexec/readers/: evdev.py
