[project]
name = "inputexec"
version = "0.1.1"
description = "Simple Python program to execute commands on keypress on headless systems"
readme = "README.rst"
authors = [
    { name = "Raphaël Barrois", email = "raphael.barrois+inputexec@polytechnique.org" }
]
requires-python = ">=3.13"
dependencies = ["evdev"]

[project.scripts]
inputexec = "inputexec.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
